# shopping-affiliate

./: .ads-handoff-cta-rewrite-768749526323172.md  .ads-handoff-cta-rewrite-deploy-canary.md  .ads-handoff-edit-comment-768749526323172.md  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  package.json
.playwright-cli/: page-2026-03-18T17-31-52-502Z.yml  page-2026-03-18T17-32-39-721Z.yml  page-2026-03-18T17-35-59-771Z.yml  page-2026-04-04T03-11-27-472Z.yml  page-2026-04-04T11-11-09-656Z.yml
.wrangler/cache/: cf.json  wrangler-account.json
apps/: README-id-apps-moved.md
apps/accounts-bridge/: README.md
apps/accounts-login/: README.md  project.yml
apps/admin-media-drive/: .env.example  .gitignore  README.md  package.json
apps/affiliate-credential-vault/: README.md  package.json
apps/affiliate-shortlink/: ecosystem.config.js  main.js  package.json  shopee-shorten.js
apps/affiliate-shortlink-cloak/: README.md  package.json
apps/affiliate-shortlink-cloak-python/: README.md  pyproject.toml
apps/affiliate-shortlink-cloak-python/scripts/: run_dev.sh  smoke_local.sh
apps/affiliate-shortlink-cloak-python/src/affiliate_shortlink_cloak_python/: __init__.py  accounts.py  browser.py  click_report.py  conversion_report.py  mcp_server.py  report_common.py  server.py  shopee.py  stealth_backend.py
apps/affiliate-shortlink-cloak-python/tests/: test_accounts.py  test_browser_report.py  test_mcp_server.py  test_reports.py  test_request_first.py  test_server_helpers.py  test_shopee.py  test_stealth_backend.py  test_stealth_report.py
apps/browsersaving/: .dockerignore  .gitignore  BrowserSavingTray.cs  Dockerfile  browsersaving-tray.ps1  create-startup.vbs  docker-compose.selfhost.yml  docker-compose.web-standalone.yml  ecosystem.config.js  launcher-server.js  package.json  token-service.js  vite.config.ts
apps/clickreport-worker/: README.md  package.json  wrangler.toml
apps/content-pipeline/: .gitignore  README.md  fb_links.py  fb_posts.py  fb_pull_all.py  pages.json  schema.sql  store_clip.py  store_local.py
apps/telegram-video-storage/: .gitignore  Cargo.toml  README.md
apps/telegram-video-storage/src/: config.rs  lib.rs  main.rs  routes.rs
apps/telegram-video-storage/src/storage/: mock.rs  mod.rs  telegram.rs
apps/telegram-video-storage/tests/: archive_e2e.rs
browsersaving/: test.json  vite.config.ts
browsersaving/src-tauri/: Cargo.toml  tauri.conf.json
browsersaving/src-tauri/icons/: icon.icns
browsersaving/src-tauri/resources/: fb_token_cli.py  fb_token_wrapper.py
browsersaving/src-tauri/resources/mobile-simulator-extension/: manifest.json
browsersaving/src-tauri/resources/mobile-simulator-extension/_locales/ar/: messages.json
browsersaving/src-tauri/resources/mobile-simulator-extension/_locales/da/: messages.json
browsersaving/src-tauri/resources/mobile-simulator-extension/_locales/de/: messages.json
browsersaving/src-tauri/resources/mobile-simulator-extension/_locales/es_419/: messages.json
browsersaving/src-tauri/resources/mobile-simulator-extension/_locales/et/: messages.json
browsersaving/src-tauri/resources/mobile-simulator-extension/_locales/fil/: messages.json
browsersaving/src-tauri/resources/mobile-simulator-extension/_locales/gu/: messages.json
browsersaving/src-tauri/resources/mobile-simulator-extension/_locales/hu/: messages.json
browsersaving/src-tauri/resources/mobile-simulator-extension/_locales/lv/: messages.json
browsersaving/src-tauri/resources/mobile-simulator-extension/_locales/nl/: messages.json
browsersaving/src-tauri/resources/mobile-simulator-extension/_locales/no/: messages.json
browsersaving/src-tauri/resources/mobile-simulator-extension/_locales/sv/: messages.json
browsersaving/src-tauri/resources/mobile-simulator-extension/_locales/te/: messages.json
browsersaving/src-tauri/resources/mobile-simulator-extension/_locales/th/: messages.json
browsersaving/src-tauri/resources/mobile-simulator-extension/_locales/uk/: messages.json
browsersaving/src-tauri/resources/mobile-simulator-extension/_locales/vi/: messages.json
browsersaving/src-tauri/resources/mobile-simulator-extension/_locales/zh_CN/: messages.json
browsersaving/src-tauri/resources/mobile-simulator-extension/css/: simulator.css
browsersaving/src-tauri/resources/mobile-simulator-extension/js/: background.js  offscreen.js  spoofer.js
browsersaving/src-tauri/resources/stealth-extension/: manifest.json
browsersaving/src-tauri/src/: lib.rs
docs/: accounts-bridge-v2.md
scripts/: video-affiliate-worker-ops.sh
video-affiliate/: README.md
video-affiliate/merge-rust/: Cargo.toml  Dockerfile  README.md  debug_subtitles.ass  debug_subtitles.srt  subtitles_input.srt
video-affiliate/merge-rust/src/: pipeline.rs
(+699 files in other folders)
