[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "affiliate-shortlink-cloak-python"
version = "0.0.1"
description = "Minimal Python CloakBrowser shortlink prototype (test-only, port 8811)"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
browser = ["cloakbrowser"]

[tool.setuptools.packages.find]
where = ["src"]
