[package]
name = "merge-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
async-recursion = "1.1.1"
axum = "0.8.8"
base64 = "0.22.1"
bytes = "1.11.1"
chrono = "0.4.43"
dotenvy = "0.15.7"
futures = "0.3.32"
hyper = "1.8.1"
multer = "3.1.0"
regex = "1.12.3"
reqwest = { version = "0.13.2", default-features = false, features = ["json", "native-tls", "http2", "multipart"] }
reqwest-middleware = "0.5.1"
reqwest-retry = "0.9.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tempfile = "3.25.0"
tokio = { version = "1.49.0", features = ["full", "macros"] }
tower-http = { version = "0.6.8", features = ["cors"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
url = "2.5.8"
urlencoding = "2.1.3"
uuid = { version = "1.21.0", features = ["v4"] }
